# 2022-repo-mt-w2v2

./: .env.example  .gitignore  README.md  pyproject.toml  readme.md  run_debug_dm.py  run_mt_speech_speaker.py  run_speaker.py  run_speech.py  val_trials.txt
config/: train_mt_speaker_speech.yaml  train_speaker.yaml  train_speech.yaml
config/data/: librispeech.yaml  mt_vox1_libri.yaml  mt_vox2_libri.yaml  voxceleb1.yaml  voxceleb2.yaml
config/experiment/: baseline_speaker_first+cls.yaml  baseline_speaker_mean.yaml  baseline_speech.yaml  multi_task_2heads_vanilla.yaml
config/hydra/launcher/: slurm.yaml
config/network/: speaker_wav2vec2_fc.yaml  speech_wav2vec2_fc.yaml
config/speech/dataloader/: speech.yaml
config/trainer/: trainer.yaml
requirements/: requirements_torch110_cuda113.txt
scripts/: hydra_bash_complete.sh  setup_dependencies_with_gpu.sh  try_batch_size.py  validate_scores.py
scripts/download/: download_and_prepare_rirs.sh  download_librispeech.sh  download_pretrained_models.sh  download_voxceleb_meta.sh  fix_csv_file.py
src/: auto_lr_find.py  debug_dm.py  main.py
src/callbacks/: input_monitor_callback.py  memory_monitor.py
src/data/: audio_collate_pad.py  batches.py  loading_config.py  util.py
src/layers/: cosine_linear.py  pooling.py
src/networks/: branched_wav2vec2.py  heads.py  wav2vec2.py
src/pl_modules/: __init__.py  base_lightning_module.py  mt_speech_speaker_lightning_module.py  speaker_recognition_module.py  speech_recognition_module.py
src/util/: config_util.py  hydra_resolvers.py  system.py  torch.py
(+51 files in other folders)
